# CogniRename

./: .gitignore  DLIB_SOLUTION_OPTIONS.md  MINIMAL_VERSION_REPORT.md  README.md  directorystructure.md  pyproject.toml  requirements.txt  requirements_minimal.txt  requirements_windows.txt  run_minimal_app.py  technologystack.md
.cursor/rules/: global.mdc
.specstory/history/: 2025-05-28_04-25-写真自動リネーム要件定義.md  2025-05-28_04-58-写真自動リネームの要件定義.md
scripts/: setup_env.py
src/cognirename/: __init__.py  config.py
src/cognirename/cli/: __init__.py  commands.py  commands_minimal.py
src/cognirename/core/: __init__.py  db.py  face_service.py  face_service_enhanced.py  face_service_minimal.py  rename_service.py  rename_service_minimal.py
src/cognirename/ui/: __init__.py  app.py  app_minimal.py  components.py
src/cognirename/utils/: __init__.py  image_io.py  path_helpers.py
tests/: __init__.py  test_config.py  test_utils.py
